thesis: Rearrange sections RISC-V/Model to Architecture/IFC

--- a/thesis/sections/model.tex
+++ b/thesis/sections/model.tex
@@ -1,106 +1,10 @@
 %!TEX root = ../thesis.tex
 
-\section{Model}
-\label{sec:model}
+\section{Information Flow Control}
 
 % TODO: Introduction
-% TODO: Add goal of the architecture and in particular, checking it
 
-\subsection{The MINRV8 Architecture}
-\label{sec:minrv8}
-
-The architecture that will be model checked in this thesis is a minimal, \gls{riscv}-inspired 8-bit architecture and shall be named MINRV8 from now on.
-A secure embedded system that implements the RV32E, i.e. base integer instruction set for embedded computing, was taken as a role model for this minimal architecture.
-
-MINRV8 supports 4 general purpose registers and has two privilege modes: machine- and user-mode.
-Besides this, it has 4-bytes of readable and writeable memory which is divided into two regions the first of which ranges from addresses 0 to 1 whereas the other occupies all remaining addresses, i.e. 2 to 3.
-MINRV8 supports basic instructions for memory reads and writes, integer arithmetic with $ + $ and $ - $, bit-shifts, bitwise-logical operations with \minrv{And} and \minrv{Or}, a \minrv{Mov} instruction to move a word from one register to another, a comparison instruction, two instructions to switch privilege mode and instructions to read and write \glspl{csr}.
-A full list of all instructions can be found in table \ref{tbl:min-arch-instrs}.
-Machine words are generally interpreted as signed-words thus there won't be unsigned counterparts to integer arithmetic or the comparison instruction.
-
-\begin{table}
-    \centering
-    \begin{tabular}{|l p{8cm}|}
-        \hline
-        \minrv{Load rd, rs1} & Load the word stored in memory at the address stored in registers \minrv{rs1} modulo 4 into register \minrv{rd} \\
-        \minrv{Store rs1, rs2} & Store the word located in register \minrv{rs2} into memory at address stored in register \minrv{rs1} modulo 4 \\
-        \minrv{Loadi rd, imm} & Load the 8-bit immediate value \minrv{imm} into register \minrv{rd} \\
-        \minrv{Add rd, rs1, rs2} & Set register \minrv{rd} to the sum of the values in registers \minrv{rs1} and \minrv{rs2} \\
-        \minrv{Sub rd, rs1, rs2} & Set register \minrv{rd} to the value of register \minrv{rs1} minus the value of register \minrv{rs2} \\
-        \minrv{And rd, rs1, rs2} & Set register \minrv{rd} to the result of a bitwise-and of the values of registers \minrv{rs1} and \minrv{rs2} \\
-        \minrv{Or rd, rs1, rs2} & Same as \minrv{And} but with the bitwise-or operation \\
-        \minrv{Mov rd, rs1} & Set register \minrv{rd} to the content of register \minrv{rs1} \\
-        \minrv{Sll rd, rs1, rs2} & Set register \minrv{rd} to content of register \minrv{rs1} shifted left logically (i.e. without sign-extension) by the value in register \minrv{rs2} \\
-        \minrv{Sra rd, rs1, rs2} & Set register \minrv{rd} to the content of register \minrv{rs1} shifted right arithmetically (i.e. with sign-extension) by the value in register \minrv{rs2} \\
-        \minrv{Slt rd, rs1, rs2} & Set register \minrv{rd} to 0x01 if the value in register \minrv{rs1} is smaller than the value in register \minrv{rs2} \\
-        \minrv{Ecall} & Environment call to machine-mode \\
-        \minrv{Mret} & Machine-mode return from trap handler \\
-        \minrv{Csrrs rd, rs1, rs2} & Read the value of the \gls{csr} with index \minrv{rs1} modulo the number of all \glspl{csr} and store it in register \minrv{rd}; additionally, set all bits of the \gls{csr} high that are high in register \minrv{rs2} \\
-        \minrv{Csrrc rd, rs1, rs2} & Same as \minrv{Csrrs} but set all bits low that are low in register \minrv{rs2} \\
-        \hline
-    \end{tabular}
-    \caption{Instructions of the MINRV8 architecture}
-    \label{tbl:min-arch-instrs}
-\end{table}
-
-Besides the general purpose storage options, MINRV8 also includes three \glspl{csr}: an \gls{mstatus} equivalent, a \gls{pmpcfg} equivalent and a \gls{pmacfg} register that implements the configuration of some \glspl{pma} as described in section \ref{sec:memory-attrs}.
-MINRV8 supports external interrupts as the only source of interrupts and an environment call to machine-mode as the only source of exceptions.
-Therefore, in the context of MINRV8, \gls{mstatus} has 4 bits comprising two stacking bits for taking traps, a MEIP bit to signal pending external interrupts and a MIE bit to en- or disable interrupts.
-
-The \gls{pmacfg} register defines cacheability of the two memory regions.
-Each memory region can either be set as uncacheable, write-back-cacheable, write-through-cacheable or write-protected-cacheable.
-% TODO: Introduce intel architecture
-% TODO: Is it really the x86 architecture?
-% TODO: Introduce caching in detail
-These caching methods are inspired by the caching methods that are available in the x86 architecture from Intel as described in section 11.3 \textit{Methods of Caching Available} of the System Programming Guide in the Software Developer's Manual.
-This manual describes these methods of caching as follows:
-\begin{displaycquote}[p.11-7]{IntelSystemProgramming}
-    \begin{description}
-        \item[Write-through (WT)] --- \textelp{} Reads come from cache on cache hits; read misses cause cache fills. \textelp{}
-        All writes are written to a cache line (when possible) and through to system memory.
-        When writing through to memory, invalid cache lines are never filled, and cache lines are either filled or invalidated. \textelp{}
-        \item[Write-back (WB)] --- \textelp{} Reads come from cache lines on cache hits; read misses cause cache fills. \textelp{}
-        Write misses cause cache line fills \textelp{}, and writes are performed entirely in the cache, when possible. \textelp{}
-        The write-back memory type reduces bus traffic by eliminating many unnecessary writes to system memory.
-        Writes to a cache line are not immediately forwarded to system memory; instead, they are accumulated in the cache.
-        The modified cache lines are written to system memory later, when a write-back operation is performed.
-        Write-back operations are triggered when a cache lines need to be deallocated, such as when new cache lines are being allocated in a cache that is already fill. \textelp{}
-        \item[Write-protected (WP)] --- Reads come from cache lines when possible, and read misses cause cache fills.
-        Writes are propagated to the system bus and cause corresponding cache lines on all processors on the bus to be invalidated.
-        \textelp{}
-    \end{description}
-\end{displaycquote}
-
-These paragraphs vom the System Programming Guide are summarized in table \ref{tbl:cache-methods}.
-In this setting, it was decided to always fill the cache on write-hits for write-through-cacheable memory regions to make the caching methods as concise as possible although the manual leaves it open to implementations to also invalidate the cache.
-
-\begin{table}
-    \centering
-    \begin{tabular}{| c r | c c c c |}
-        \hline
-        && Uncached & WB & WT & WP \\
-        \hline
-        \multirow{2}{*}{Write} & Hit & \ding{53} & Fill & Fill if valid & Invalidate \\
-        & Miss & \ding{53} & Fill & \ding{53} & \ding{53} \\
-        \hline
-        \multirow{2}{*}{Read} & Hit & \ding{53} & Read & Read & Read \\
-        & Miss & \ding{53} & Fill & Fill & Fill \\
-        \hline
-    \end{tabular}
-    \caption{Caching Methods}
-    \label{tbl:cache-methods}
-\end{table}
-
-The \gls{pmpcfg} register allows to set read and write privileges per memory region and also allows to lock the settings of individual regions.
-
-Someone experienced in the field of microcontrollers and processors might find MINRV8 to lack some crucial features, such as jump and branch instructions and the specification of executable memory or an instruction fetch unit.
-These points were left out or left unspecified deliberately.
-However, a good reasoning for this can not be given at this point.
-The development of the MINRV8 architecture was tightly coupled to its implementation in nuXmv which will presented in section \ref{sec:model-implementation}.
-In section \ref{sec:model-scope}, the scope of the MINRV8 architecture will be analyzed - both in terms of what it tries to achieve and what it actually is capable of representing, i.e. how close it is to real-life architectures.
-In this section, the aforementioned problems will also be reflected.
-
-\subsection{Information Flow Control}
+\subsection{Information Flow Semantics for Instructions}
 \label{sec:ifc-model}
 
 % TODO: reference to introduction of Ferraiuolo17 paper
@@ -503,185 +407,8 @@ More on this in section \ref{sec:checking}.
     \label{fig:ifc-semantics}
 \end{figure}
 
-\subsection{Implementation of MINRV8 in nuXmv}
-\label{sec:model-implementation}
-
-% TODO: better introduction, i.e. introduce the parts we will talk about and nuXmv in general (this might have already been done in the introduction then)
-
-\subsubsection{Core Functionality}
-
-\paragraph{Variables}
-In nuXmv, models of a piece of software, hardware or in this case a specification are described using variables with transition relations.
-The core of the model is implemented using four variables:
-\begin{itemize}
-    \item \smv{priv : boolean}
-    \item \smv{csrs : array 0..1 of unsigned word[8]}
-    \item \smv{regs : array 0..3 of signed word[8]}
-    \item \smv{memory : array 0..3 of signed word[8]}
-\end{itemize}
-
-As the names suggest: \smv{priv} indicates the current privilege mode where \smv{TRUE} means that the \gls{hart} is in machine-mode and \smv{FALSE} means that the \gls{hart} is in user-mode.
-\smv{csrs} hold the three \glspl{csr} of the MINRV8 architecture.
-Technically, only 16 bits are needed to implement all \glspl{csr} of the MINRV8 architecture which is why only two \enquote{physical} \glspl{csr} are modelled.
-This allows to implement a homogeneous interface for memory/register reads and writes and does not introduce unused bits to the implementation, i.e. dead state space that still requires traversal from nuXmv.
-\gls{mstatus} is located in the lower half (bits 0 to 3) of \smv{csrs[0]}, \gls{pmacfg} in the upper half (bits 4 to 7) of \smv{csrs[0]} and \gls{pmpcfg} in \smv{csrs[1]}.
-The variables \smv{regs} and \smv{memory} implement the registers and memory in a straight-forward fashion.
-
-Furthermore, the model knows five input variables:
-\begin{itemize}
-    \item \smv{op}
-    \item \smv{rd : 0..3}
-    \item \smv{rs1 : 0..3}
-    \item \smv{rs2 : 0..3}
-    \item \smv{m_external_interrupt : unsigned word[1]}
-\end{itemize}
-
-\smv{op}, \smv{rd}, \smv{rs1} and \smv{rs2} represent a fully decoded instruction where \smv{op} is the opcode as a symbolic constant and the other arguments point to registers with per-instruction determined semantics.
-When an instruction does not support some or all of the arguments to the instruction, the values of these input variables are simply ignored.
-The variable \smv{m_external_interrupt} signals the event of a pending external interrupt from some source outside of the \gls{hart}.
-
-There is no input variable for an immediate value which might be needed by the \minrv{Loadi} instruction because otherwise, extra state space would be wasted.
-% TODO: is this understandable?
-Instead, the content of the destination register in the case of a \minrv{Loadi} instruction being executed is not constrained.
-Thereby, the value written to the destination register by the \minrv{Loadi} instruction is encoded implicitly in the transition relation rather than in the state space.
-
-\paragraph{Transitions}
-nuXmv allows to constrain the transition of variables by arbitrary formulas expressed in propositional logic.
-The system can make a transition if it satisfies all formulas given as constraints.
-Therefore - if full control over the transition relation is desired - it often is not sufficient to simply constrain transitions by a group of implications\footnote{%
-    The exception to this are groups of implications where the antecedents form a total case differentiation, i.e. where one antecedent is always true.
-}.
-
-\begin{example}
-    Consider this nuXmv model that implements an adder that can store its result in two registers:
-    \begin{lstlisting}[language=smv]
-        MODULE main
-            VAR
-                r1 : integer;
-                r2 :integer;
-            IVAR
-                ri : 1..2;
-                summand1 : integer;
-                summand2 : integer;
-
-            DEFINE sum := summand1 + summand2;
-
-            TRANS ri = 1 -> next(r1) = sum;
-            TRANS ri = 2 -> next(r2) = sum;
-
-            LTLSPEC G (ri = 1 -> r2 = next(r2));
-            LTLSPEC G (ri = 2 -> r1 = next(r1));
-    \end{lstlisting}
-
-    At first, this implementation seems to match the intuition of the adder.
-    It is declared imperatively that when the selector input variable \smv{ri} equals 1, \smv{r1} is updated and when it equals 2, \smv{r2} is updated.
-    However, attempting to prove one of the two properties in the model which both state that a register doesn't change if it isn't selected, results in nuXmv quickly giving a counter-example.
-    This is because the implications do not fully cover all possible transitions of the system.
-    On a transition where \smv{ri} does not equal 1 (or 2), the next value of \smv{r1} (or \smv{r2}) is not constrained, i.e. can change to any value.
-    Swapping out the implication \smv{->} with a iff \smv{<->} does not solve this as now only that whenever the next value chosen randomly for \smv{r1} or \smv{r2} happens to coincide with the sum of the input variables, \smv{ri} must be equal to the appropriate index.
-    In all other cases, nuXmv still can choose whatever next value it wants.
-
-    The only solution to this is covering all other cases and explicitly stating what should happen then as for example can be done by using an inline-if expression:
-    \begin{lstlisting}[language=smv]
-        TRANS next(r1) = (ri = 1 ? sum : r1);
-        TRANS next(r2) = (ri = 2 ? sum : r2);
-    \end{lstlisting}
-
-    Now, whenever \smv{ri} is not equal to the respective index, \smv{r1} (or \smv{r2}) will be stable.
-    With this implementation, nuXmv fails to find a counter-example for the two LTL properties.
-\end{example}
-
-% TODO: What is SMV?
-In the implementation in SMV of the MINRV8 architecture, \smv{case}-expressions that always close with a default statement were used to ensure that transitions of variables are always fully constrained.
-
-In the following, the \enquote{formal idea} of the variable transitions of the model will be introduced.
-In this context, it is assumed that variables are stable unless otherwise mentioned, i.e. default statements of model explicitly are not listed for the most part.
-
-The transitions of the \smv{priv} variable are simple.
-There are two conditions by which \smv{priv} can change.
-Firstly, whenever there is an exception - be it an exception triggered by a pending external interrupt or a environment call to machine-mode exception - the \gls{hart} switches to machine-mode and does not execute the current instruction, i.e. the value of \smv{op}, \smv{rd}, \smv{rs1} and \smv{rs2} are ignored.
-Secondly, when the \minrv{Mret} instruction is executed, the \gls{hart} sets \smv{priv} to the value stored in \gls{mstatus}.MPP (cf. section \ref{sec:rv-exn}).
-
-\gls{mstatus} changes under the same conditions which leads to the transitions of \smv{csrs}.
-On a trap, MPP and MPIE are written accordingly while MEIP and MIE are set to zero.
-MEIP can be set to zero although the trap might have been triggered by an \minrv{Ecall} instruction because interrupts have higher priority in \gls{riscv} than synchronous exceptions.
-To understand why this is correct, there are two cases to consider.
-Either an external interrupt was set pending: then it must be serviced immediately and MEIP must be cleared; or it wasn't set pending: then writing MEIP with 0 does not change the state of the \gls{hart}.
-On return from machine-mode, i.e. execution of \minrv{Mret}, MIE is written with MPIE, MPIE is set to 1 and MPP is set to 0; all other bits are left unchanged.
-An exception to the rules mentioned above is the field MEIP which can be set high on every transition based on the value of \smv{m_externel_interrupt}.
-
-The \glspl{csr} can also be written by the \minrv{Csrrc} or \minrv{Csrrs} instructions.
-In order to control read- and write-access to the \glspl{csr}, the model knows two constant arrays:
-\begin{lstlisting}[language=smv]
-    __csrs_read_privs := [ 0h_0F, 0h_00 ];
-    __csrs_write_privs := [ 0h_FF, 0h_FF ];
-\end{lstlisting}
-
-These arrays provide bitmasks that indicate the least privilege level necessary to read or write the \gls{csr} of the corresponding index at the corresponding bit-position.
-All \glspl{csr} besides \gls{mstatus} can be read but but no \gls{csr} can be written by user-mode.
-These constants are transformed to the bitmasks \smv{csr_read_mask} or \smv{csr_write_mask} respectively by the per-bit $ b $ implication of $ b \rightarrow \texttt{priv} $ based on the index of the currently targeted \gls{csr}.
-Bits of \glspl{csr} are changed by the \minrv{Csrrs} or \minrv{Csrrc} instruction only if \smv{csr_write_mask} is high at the corresponding index with two exceptions:
-\begin{itemize}
-    \item \gls{mstatus}.MEIP cannot be written by software
-    \item Once a \gls{pmpcfg} register has been locked, it cannot be changed anymore
-\end{itemize}
-
-The transition relation of the registers and memory is easier to understand.
-\smv{regs} changes at index \smv{i} if it is targeted by some instruction and no trap is taken.
-Then, \smv{regs[i]} is written with a value determined by the instruction semantics\footnote{%
-    This only applies to instructions that \textit{have} semantics targeting registers, e.g. \minrv{Ecall} will not change values of any register.
-}.
-These per-instruction semantics include considering the \smv{csr_read_mask} bitmask on \minrv{Csrrs} and \minrv{Csrrc}.
-
-\smv{memory} is written at index \smv{i} if it is targeted by the \minrv{Store} instruction, no trap occurs and the write privilege settings in \gls{pmpcfg} allow the current privilege mode to write the register.
-Otherwise \smv{memory} does not change.
-It does not mark an error, should the current privilege level not suffice to write the targeted memory address.
-No exception will be generated - the memory simply will not be written.
-The same is true for read privileges and \smv{regs} on a \minrv{Load}.
-
-\subsubsection{Caching}
-
-% TODO: mention that the cache is its own module accessible via \texttt{cache}
-The cache spices up transitions of memory and registers and comprises three variables:
-\begin{itemize}
-    \item \smv{addr : 0..3}
-    \item \smv{valid : boolean}
-    \item \smv{line : signed word[8]}
-\end{itemize}
-
-These variables transition dependent on the cache-configuration of the respective memory region in \gls{pmacfg}.
-As already introduced in section \ref{sec:minrv8}, a memory region can be either set as uncacheable, write-back-cacheable or write-through-cacheable.
-If a memory region is set as uncacheable, the cache will ignore reads and writes to this region and not make any transition.
-
-\paragraph{Reads}
-If a memory region is set as cacheable\footnote{%
-    In context of this thesis, \enquote{cacheable} means that a memory region is marked as write-back-cacheable, write-through-cacheable or write-protected-cacheable.
-}, reads will trigger a cache-fill.
-On a \minrv{Load} if the cache is invalid or currently holds the contents of a different memory address than targeted, \smv{addr} gets written with \smv{regs[rs1] mod 4}, \smv{valid} becomes \smv{TRUE} and \smv{line} is written with \smv{memory[addr]}\footnote{%
-    \smv{addr} here refers to the already updated value of that variable, i.e. \smv{regs[rs1] mod 4}.
-}.
-This process is independent of the current privilege level, e.g. user-mode can cause a cache-fill with memory content in regions that are unreadable to it.
-Though, user-mode still won't be able to read the respective word as reads are privileged controlled.
-
-If, however, on a \minrv{Load} the cache already holds the targeted word, is valid and the current mode suffices to read the respective memory address, \smv{line} instead of \smv{memory[regs[rs1] mod 4]} will be written into register \smv{rd}.
-
-\paragraph{Writes}
-From the cache's perspective, writes to regions which are set cacheable work the same way, regardless of the specific region's cacheability settings.
-For such a region, on a \minrv{Store}, \smv{line} will be written with \smv{regs[rs2]}, \smv{address} with \smv{regs[rs1] mod 4} and \smv{valid} will become \smv{TRUE}.
-However, if the region is set to be write-through-cacheable, the write will also be reflected in memory whereas for a write-back-cacheable region the write will be reflected in cache only.
-
-This brings the need to persist writes to the cache in memory when cache lines are evicted.
-For example, consider the following program where it is assumed that \minrv{regs[1] mod 4 != regs[2] mod 4}:
-\begin{lstlisting}[language=minrv8]
-    Store 1, 0  # store regs[0] at memory[regs[1] mod 4]
-    Load 0, 2   # read memory[regs[2] mod 4] to regs[0]
-\end{lstlisting}
-
-If the memory region targeted by \minrv{regs[1]} was set to be write-back-cacheable the write in the first line would not be persisted in memory but would happen on cache level only.
-If furthermore the memory region targeted by \minrv{regs[2]} was set to be cacheable as well, the read in the second line would overwrite changes of the first instruction which is why the cache content must first be written to memory.
-Therefore, if the cache holds some non persisted values of write-back-cacheable memory regions and either the cache's target changes or the \gls{pmacfg} attributes change such that the cache is not write-back-cacheable anymore, the content of the cache will be written to memory as well.
-
-\subsubsection{Information Flow Tracking}
+% TODO:
+\subsection{Implementation of Information Flow Tracking}
 \label{sec:ifc-implementation}
 
 In order to implement the information flow tracking semantics as described in section \ref{sec:ifc-model} we define a binary representation of the lattice of security labels given by $ \Sigma $ and $ \sqcup $.
@@ -804,51 +531,3 @@ The only exception to this is the information flow tracking of the variable \smv
 
 In other words, the \lstinline[language=SMV,mathescape]{$\dots$_conf} and \lstinline[language=SMV,mathescape]{$\dots$_integrity} variables perfectly mirror the architecture implementation as described in section \ref{sec:model-implementation}.
 Rather than simply simulating the MINRV8 architecture in nuXmv, the domain of confidentiality and the domain of integrity of the MINRV8 architecture are tracked in addition to simulating the pure computational-world.
-
-\subsection{Scope of the Model}
-\label{sec:model-scope}
-
-In summary, the MINRV8 architecture knows three groups of instructions (cf. table \ref{tbl:min-arch-instrs}):
-\begin{itemize}
-    \item Computational instructions such as Mov, \minrv{And}, \minrv{Add}, etc.
-    \item Memory instructions \minrv{Load} and \minrv{Store}
-    \item System instructions \minrv{Ecall}, \minrv{Mret}, \minrv{Csrrs}, \minrv{Csrrc}
-\end{itemize}
-
-MINRV8 is meant to be a reasonable abstraction of a real-world \gls{riscv} architecture from a security standpoint.
-However, up to this point nothing has been said about the limits of this abstraction.
-With every abstraction, there is a small chance that it perfectly matches the concept that has been abstracted but in most cases, some corners are cut.
-In this section, we will reflect on the limits of the MINRV8 architecture and its implementation.
-
-% TODO: mention that other fields are well modelled
-% TODO: mention that we actually don't need all computational instructions
-% TODO: mention performance hit of dynamic memory regions
-
-A reader, experienced in the field of microcontrollers or computer-architecture in general might wonder why our model does not include:
-\begin{enumerate}
-    \item Executable memory and a \gls{pc}
-    \item Jump or branch instructions
-    \item A model of a stack pointer
-\end{enumerate}
-
-In the introduction of the MINRV8 architecture in section \ref{sec:minrv8} we mentioned that the idea of the architecture was tightly coupled to its implementation.
-The design of the model had to answer the question: How can a stream of instructions be implemented?
-nuXmv allows to think of the following options:
-\begin{enumerate}
-    \item \label{itm:exmem-frozen}
-    Use \smv{FROZENVAR}s to model executable memory - a \smv{FROZENVAR} is something like a constant in other programming languages but without a fixed value.
-    nuXmv chooses the value on the first simulation step but does not change it afterwards.
-    This is more efficient than using plain \smv{VAR}s with no transitions.
-    \item \label{itm:exmem-var}
-    Use \smv{VAR}s to model executable memory.
-    In practice, this would mean that the memory of the implementation as described in section \ref{sec:model-implementation} would be much larger than the current 4 bytes.
-    \item \label{itm:exmem-ivar}
-    Finally, use \smv{IVAR}s to model the stream of instruction.
-    This is the option we decided to go for as described in section \ref{sec:model-implementation}.
-    Using \smv{IVAR}s means that there is no model of executable memory.
-    % TODO: is the part about the ALU actually true?
-    Instead, the input variables provided to the implementation model the result of an instruction decoder that hands the \gls{alu} the ready-to-use decoded instructions on each transition of the simulated model.
-    As such, the architecture does not need to worry \textit{where} these instructions come from.
-\end{enumerate}
-
-\subsection{Trustworthiness of the Model}
