thesis: Add draft of introduction

--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -228,3 +228,22 @@
     url={https://docs.microsoft.com/en-us/security-updates/SecurityBulletins/2012/ms12-042},
     urldate={17 September 2019}
 }
+
+@article{Reid17,
+    author = {Reid, Alastair},
+    title = {Who Guards the Guards? Formal Validation of the Arm V8-m Architecture Specification},
+    journal = {Proceedings of the ACM on Programming Languages},
+    volume = {1},
+    number = {OOPSLA},
+    month = {October},
+    year = {2017},
+    issn = {2475-1421},
+    pages = {88:1-88:24},
+    articleno = {88},
+    numpages = {24},
+    url = {http://doi.acm.org/10.1145/3133912},
+    doi = {10.1145/3133912},
+    acmid = {3133912},
+    publisher = {ACM},
+    address = {New York, NY, USA},
+}
