--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -50,6 +50,18 @@
     % TODO: description
     description={}
 }
+\newglossaryentry{mips}{
+    name={\textsc{Mips}},
+    description={},
+}
+\newglossaryentry{arm}{
+    name={\textsc{Arm}},
+    description={},
+}
+\newglossaryentry{x86}{
+    name={x86},
+    description={},
+}
 \newglossaryentry{spin}{
     name={\textsc{Spin}},
     description={}
@@ -69,6 +81,14 @@
 \newglossaryentry{z3}{
     name={\textsc{z3}},
     description={}
+}
+\newglossaryentry{secverilog}{
+    name={\textsc{SecVerilog}},
+    description={},
+}
+\newglossaryentry{trustzone}{
+    name={\gls{arm} \textsc{TrustZone}},
+    description={},
 }
 
 % TODO: descriptions
