thesis: Add draft of introduction to model checking

--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -229,6 +229,15 @@
     urldate={17 September 2019}
 }
 
+@book{Baier08,
+    author = {Baier, Christel and Katoen, Joost-Pieter},
+    title = {Principles of Model Checking},
+    year = {2008},
+    isbn = {978-0-262-02649-9},
+    publisher = {The MIT Press},
+    address = {Cambridge, Massachusetts},
+}
+
 @article{Reid17,
     author = {Reid, Alastair},
     title = {Who Guards the Guards? Formal Validation of the Arm V8-m Architecture Specification},
