--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -93,6 +93,7 @@
 
 % TODO: descriptions
 \newacronym{risc}{RISC}{reduced instruction set computer}
+\newacronym{cisc}{CISC}{complex instruction set computer}
 \newacronym{isa}{ISA}{instruction set architecture}
 \newacronym[
     description={\gls{riscv} hardware thread}
@@ -115,6 +116,7 @@
 \newacronym{bmc}{BMC}{Bounded Model Checking}
 \newacronym{2bmc}{2BMC}{Bounded Model Checking-Based Model Checking}
 \newacronym{cegar}{CEGAR}{Counterexample Guided Abstaction Refinement}
+\newacronym{ltl}{LTL}{linear temporal logic}
 
 \newacronym{jal}{\rv{Jal}}{jump and link}
 \newacronym{jalr}{\rv{Jalr}}{jump and link register}
