thesis: Add background section on Reid paper

--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -90,6 +90,10 @@
     name={\gls{arm} \textsc{TrustZone}},
     description={},
 }
+\newglossaryentry{mclass}{
+    name={\gls{arm} \textsc{M-Class}},
+    description={},
+}
 
 % TODO: descriptions
 \newacronym{risc}{RISC}{reduced instruction set computer}
