--- a/thesis/sections/background.tex
+++ b/thesis/sections/background.tex
@@ -2,6 +2,65 @@
 
 \section{Background}
 
+
+\subsection{Formal Verification of Specifications}
+\label{sec:verify-spec}
+
+As already introduced, the work of \citeauthor{Reid17} in \citetitle{Reid17} \cite{Reid17} focusses on verifying specifications, in particular an \gls{isa}, against high level properties.
+The key motivation of his work is best summarized in the conclusion of the paper:
+\begin{displaycquote}[p.88:22]{Reid17}
+    Formal verification of programs is becoming more and more practical but, if the verification is to be meaningful, it must be based on correct architecture specifications for the hardware that the programs run on.
+    That is, the specifications are a critical part of the Trusted Computing Base.
+    Unfortunately, the size and complexity of architecture specifications is such that it seems inevitable that specifications will contain bugs and our previous work confirms this supposition.
+
+    While it is common to debug specifications by \textit{testing} the specification, this paper proposes a different approach:
+    we define a set of formal properties that should hold for the specification and we \textit{formally verify} the architecture specification satisfies these properties.
+    We think of the relationship between the properties and the specification as being like the relationship between a nation's constitution and a nation's laws:
+    the constitution is concise enough that everyone can read them while the laws are too large for effective review; the constitution can be used to test whether existing or proposed laws are compatible with high level goals; and the constitution is stable and changes very, very slowly.
+\end{displaycquote}
+
+These high-level properties comprise the formalization of \textcquote[p.88:2]{Reid17}{cross-cutting features}, i.e. features that describe expected high-level behavior of the architecture.
+These have the downside that they are usually hard to grasp for humans since they require a thorough understanding of the system as a whole, yet are powerful since they often (indirectly) touch many aspects of the specification.
+In his paper, \citeauthor{Reid17} gives a list of requirements for such cross-cutting properties:
+\begin{displaycquote}[pp.88:2-3]{Reid17}
+    The central design challenge we face is to create a set of properties that:
+    \begin{itemize}
+        \item express the major guarantees that programmers depend on;
+        \item are concise so that architects can easily review and remember the entire set of properties;
+        \item are stable so that architectural extensions don't invalidate large numbers of rules;
+        \item and that describe the architecture differently from existing specification to reduce the risk of common-mode failure.
+    \end{itemize}
+\end{displaycquote}
+
+The aspects of the conciseness and stability of the properties implement the idea of a \enquote{constitution} for an \gls{isa} which links back to the paragraphs quoted above.
+The first point, however, more play a role for the practical applicability of the verification process.
+If properties, the architecture is verified against, express \enquote{major guarantess that programmers \textins{can} depend} on, they can be used to aid in usage of the platform, e.g. by \gls{os} engineers to utilize the mechanisms of the architecture correctly and thereby to write secures \glspl{os}.
+Lastly, the requirement aimed at reducing the \enquote{risk of common-mode failure} aims at other approaches of verifying specifications.
+\citeauthor{Reid17} lists three commonly used ways of verifying specifications: \textcquote[p.88:2]{Reid17}{by testing specifications against existing existing implementations; by testing specifications using testsuites used to test implementations; or as a side effect of attempting to formally verify an implementation against a specification}.
+These approaches, however, all face the risk of issues with the specification being undetected because the implementation and specification both are affected by the same issue, i.e. the risk of issues being undetected because of common-mode failure.
+This risk can be mitigated if the properties the specification will be verified against actually expresses something \textit{new}.
+
+\citeauthor{Reid17} applies his approach to the \gls{mclass} architecture for which not only a natural language but also a machine-readable specification is available.
+The machine-readable specification of the \gls{mclass} architecture implements the function \asl{TopLevel} which implements the transition of the architecture from one state to another, i.e. a cycle of the processor.
+The natural language specification on the other hand mainly consists of rules that constrain the behavior of the architecture in different situations, i.e. that constrain the transition relation between architectural states that implicitly is given by the \asl{TopLevel} function.
+
+In principle, these two forms of specification also face the risk of common-mode failures.
+In practice, however, it turned out that the natural language specification included several rules that described the behavior of the architecture on a very high-level thus meeting aforementioned requirements.
+Using these rules as high-level cross-cutting properties, \citeauthor{Reid17} was able to find 12 bugs in the \gls{mclass} specification that despite prior testing had been undiscovered up to this point.
+
+In summary, the aspects of \cite{Reid17} that are relevant for this thesis are:
+\begin{enumerate}[label=\alph*)]
+    \item the paper precisely argues for why the verification of specifications themselves is important; and
+    \item the paper proposes clear requirements for properties to verify an \gls{isa} against.
+\end{enumerate}
+
+Additionally, the paper successfully implements this approach by partially verifying the \gls{mclass} architecture.
+A downside of this work, however, is that it is limited to verifying single processor transactions only.
+This lies in the nature of the properties taken from the natural language specification which only constrain single transitions of the processor.
+
+This thesis attempts to fill this gap and proposes a new way of verifying architectural specifications which will apply to multiple processor transitions.
+The work in this thesis therefore also is subject to the same requirements that have been imposed on the high-level properties in \cite{Reid17}.
+
 \subsection{RISC-Architectures}
 
 \subsubsection{Arm}
